--- a/payment.html
+++ b/payment.html
@@ -1,10 +1,4 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
@@ -71,6 +65,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<h5>CARD NUMBER</h5>													
 														<input class="pay-logo" type="text" value="0000-0000-0000-0000" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '0000-0000-0000-0000';}" required="">
 												</div>	
+												
+												<div class="tab-1 resp-tab-content" aria-labelledby="tab_item-1">
+										<div class="payment-info">
+											<h3>Net Banking</h3>
+											<div class="radio-btns">
+												<div class="swit">								
+													<div class="check_box"> <div class="radio"> <label><input type="radio" name="radio" checked=""><i></i>RHB Bank</label> </div></div>
+													<div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>CIMB Bank</label> </div></div>
+													<div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Public Bank</label> </div></div>
+													<div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Maybank</label> </div></div>	
+												</div>
+												
 												<div class="transaction">
 													<div class="tab-form-left user-form">
 														<h5>EXPIRATION</h5>
