--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Belle &amp; Carrie Rehabilitation Yoga Web Template</title>
+	<title>Expert Training Management Portal</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script type='text/javascript' src='js/mobile.js'></script>
@@ -17,10 +17,10 @@
 				<a href="index.html">Home</a>
 			</li>
 			<li>
-				<a href="about.html">About</a>
+				<a href="about.html">Book</a>
 			</li>
 			<li>
-				<a href="classes.html">Classes</a>
+				<a href="classes.html">About Us</a>
 				<ul>
 					<li>
 						<a href="instructors.html">Instructors</a>
@@ -28,19 +28,20 @@
 				</ul>
 			</li>
 			<li>
-				<a href="contact.html">Contact</a>
-			</li>
-			<li>
-				<a href="blog.html">Blog</a>
+				<a href="contact.html">Contact Us</a>
 			</li>
 		</ul>
 	</div>
 	<div id="body">
 		<div id="tagline">
-			<h1>Yoga</h1>
-			<p>
-				For Better Health &amp; Flexibility
-			</p>
+			<h1>Expert.com</h1>
+
+			<p><h3>
+Expert.com is a local training provider which provides in-house training (or on
+site/bespoke) for companies or employees within Sarawak. The objectives of Training
+Expert.com is to provide hands-on solutions through practical information sharing to help solve
+day to day business challenges by developing human capitals that meets the company’s needs
+			</p></h3>
 		</div>
 		<img src="images/lady-in-yoga.jpg" alt="lady doing yoga" class="figure">
 	</div>
