--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Expert Training Management Portal</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css">
-	<script type='text/javascript' src='js/mobile.js'></script>
-</head>
-<body>
-	<div id="header">
-		<h1><a href="index.html">Expert Training Management Portal<span>ETMP</span></a></h1>
-		<ul id="navigation">
-			<li class="current">
-				<a href="index.html">Home</a>
-			</li>
-			<li>
-				<a href="about.html">Book</a>
-			</li>
-			<li>
-				<a href="classes.html">About Us</a>
-				<ul>
-					<li>
-						<a href="instructors.html">Instructors</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="contact.html">Contact Us</a>
-			</li>
-		</ul>
-	</div>
-	<div id="body">
-		<div id="tagline">
-			<h1>Expert.com</h1>
-
-			<p><h3>
-Expert.com is a local training provider which provides in-house training (or on
-site/bespoke) for companies or employees within Sarawak. The objectives of Training
-Expert.com is to provide hands-on solutions through practical information sharing to help solve
-day to day business challenges by developing human capitals that meets the company’s needs
-			</p></h3>
-		</div>
-		<img src="images/lady-in-yoga.jpg" alt="lady doing yoga" class="figure">
-	</div>
-	<div id="footer">
-		<div>
-			<span>123 St. City Location, Country | 987654321</span>
-			<p>
-				&copy; 2023 by Belle &amp; Carrie Rehabilitation Yoga. All rights reserved.
-			</p>
-		</div>
-		<div id="connect">
-			<a href="https://freewebsitetemplates.com/go/facebook/" id="facebook" target="_blank">Facebook</a>
-			<a href="https://freewebsitetemplates.com/go/twitter/" id="twitter" target="_blank">Twitter</a>
-			<a href="https://freewebsitetemplates.com/go/googleplus/" id="googleplus" target="_blank">Google&#43;</a>
-			<a href="https://freewebsitetemplates.com/go/pinterest/" id="pinterest" target="_blank">Pinterest</a>
-		</div>
-	</div>
-</body>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Expert Training Management Portal</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile.css">
+    <script type="text/javascript" src="js/mobile.js"></script>
+  </head>
+  <body style=" background-color: #3148a7;">
+    <div id="header">
+      <h1 style=" text-align: center;"><span style="color: white;">Expert
+          Management Training Portal</span></h1>
+      <h1 style=" text-align: center;"><span style="color: white;">EMTP</span></h1>
+      <p style="text-align: center;"><br>
+      </p>
+      <p style="text-align: center;"><br>
+      </p>
+      <ul id="navigation">
+        <li class="current"> <span style="color: red;"><b style="color: #030303;"><a
+                href="index.html">Home</a></b> </span></li>
+        <span style="color: red;"> </span>
+        <li> <b style="color: white;"><a href="about.html">Book</a></b> </li>
+        <span style="color: red;"> </span>
+        <li> <strong><span style="color: red;"><a href="classes.html">About Us</a></span></strong>
+          <ul>
+            <li> <span style="color: red;"><a href="instructors.html">Instructors</a></span>
+            </li>
+          </ul>
+        </li>
+        <span style="color: red;"> </span>
+        <li><span style="color: red;"> <strong><a href="contact.html">Contact
+                Us</a></strong></span> </li>
+      </ul>
+    </div>
+    <div id="body">
+      <div id="tagline">
+        <h1 style="width: 823px;">&nbsp;Expert.com</h1>
+        <h2 style=" text-align: justify; width: 850px;"> Expert.com is a local
+          training provider which provides in-house training (or on
+          site/bespoke) for companies or employees within Sarawak. The
+          objectives of Training Expert.com is to provide hands-on solutions
+          through practical information sharing to help solve day to day
+          business challenges by developing human capitals that meets the
+          company’s needs.</h2>
+      </div>
+      <div style="text-align: center;"><img src="images/lady-in-yoga.jpg" alt="lady doing yoga"
+          class="figure" style="width: 823px; height: 559px; margin-left: 57px;"></div>
+    </div>
+    <div id="footer">
+      <div> <span style="width: 638px;">93350, Jalan Simpang Tiga, Kuching,
+          Sarawak, Malaysia</span>
+        <p> © 2021 by Firuz Zaripov. All rights reserved. </p>
+      </div>
+      <div id="connect"> <a href="https://freewebsitetemplates.com/go/facebook/"
+          id="facebook" target="_blank">Facebook</a> <a href="https://freewebsitetemplates.com/go/twitter/"
+          id="twitter" target="_blank">Twitter</a> <a href="https://freewebsitetemplates.com/go/googleplus/"
+          id="googleplus" target="_blank">Google+</a> <a href="https://freewebsitetemplates.com/go/pinterest/"
+          id="pinterest" target="_blank">Pinterest</a> </div>
+    </div>
+  </body>
 </html>
