--- a/html/login_client.html
+++ b/html/login_client.html
@@ -7,7 +7,7 @@
   <title>ETMP Sign in/Sign up</title>
   <meta name="description" content="ETMP client login page">
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
