link admin and client login pages to the js script to reveal the relavant forms

--- a/html/login_admin.html
+++ b/html/login_admin.html
@@ -33,6 +33,6 @@
 
   </div>
 
-  <script src="js/scripts.js"></script>
+  <script src="../js/login_registration_script.js"></script>
 </body>
 </html>
