--- a/html/login_client.html
+++ b/html/login_client.html
@@ -20,13 +20,13 @@
         <input type="text" placeholder="name"/>
         <input type="password" placeholder="password"/>
         <input type="text" placeholder="email address"/>
-        <button>Create</button>
+        <a class="button">Create</a>
         <p class="message">Already registered? <a href="#">Sign In</a></p>
       </form>
       <form class="login-form">
         <input type="text" placeholder="username"/>
         <input type="password" placeholder="password"/>
-        <button>Login</button>
+        <a class="button" href="../index.html">Login</a>
         <p class="message">Not registered? <a href="#">Create an account</a></p>
       </form>
     </div>
