--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -11,11 +10,11 @@
   </head>
   <body style=" background-color: #3148a7;">
     <div id="header">
-      <h1 style=" text-align: center;"><span style="color: white;">Expert
-          Management Training Portal</span></h1>
-      <h1 style=" text-align: center;"><span style="color: white;">EMTP</span></h1>
-      <p style="text-align: center;"><br>
-      </p>
+      <div style="text-align: center;"><img src="file:///C:/Users/xXx/Desktop/Untitled.jpg"
+          alt="logo.big" title="logo" style="width: 303px; height: 134px;"></div>
+      <h1 style="text-align: center; margin-left: -37px; width: 1039px;"><b><span
+            style="color: white;">Expert Management Training Portal</span></b><span
+          style="color: white;"><b><span style="font-family: Calibri;"> (EMTP)</span></b></span></h1>
       <p style="text-align: center;"><br>
       </p>
       <ul id="navigation">
@@ -37,7 +36,7 @@
     </div>
     <div id="body">
       <div id="tagline">
-        <h1 style="width: 823px;">&nbsp;Expert.com</h1>
+        <h1 style="width: 823px;">&nbsp;<span style="font-family: Calibri;">Expert.com</span></h1>
         <h2 style=" text-align: justify; width: 850px;"> Expert.com is a local
           training provider which provides in-house training (or on
           site/bespoke) for companies or employees within Sarawak. The
@@ -54,11 +53,5 @@
           Sarawak, Malaysia</span>
         <p> © 2021 by Firuz Zaripov. All rights reserved. </p>
       </div>
-      <div id="connect"> <a href="https://freewebsitetemplates.com/go/facebook/"
-          id="facebook" target="_blank">Facebook</a> <a href="https://freewebsitetemplates.com/go/twitter/"
-          id="twitter" target="_blank">Twitter</a> <a href="https://freewebsitetemplates.com/go/googleplus/"
-          id="googleplus" target="_blank">Google+</a> <a href="https://freewebsitetemplates.com/go/pinterest/"
-          id="pinterest" target="_blank">Pinterest</a> </div>
-    </div>
   </body>
 </html>
