updated client pages

--- a/html/login_client.html
+++ b/html/login_client.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>ETMP Sign in/Sign up</title>
+  <title>ETMP Client Login</title>
   <meta name="description" content="ETMP client login page">
 
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/login_registration_styles.css">
 
 </head>
 
@@ -17,8 +17,8 @@
 
     <div class="form">
       <form class="login-form">
-        <input type="text" placeholder="username"/>
-        <input type="password" placeholder="password"/>
+        <input type="text" placeholder="Username"/>
+        <input type="password" placeholder="Password"/>
         <a class="button" href="../index.html">Login</a>
         <p class="message">Not registered? <a href="signup_client.html">Create an account</a></p>
       </form>
