--- a/html/signup_client.html
+++ b/html/signup_client.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>ETMP Sign in/Sign up</title>
+  <title>ETMP Client Sign Up</title>
   <meta name="description" content="ETMP client login page">
 
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/login_registration_styles.css">
 
 </head>
 
@@ -17,11 +17,11 @@
 
     <div class="form">
       <form class="register-form">
-        <input type="text" placeholder="name"/>
-        <input type="password" placeholder="password"/>
-        <input type="text" placeholder="email address"/>
+        <input type="text" placeholder="Email address"/>
+        <input type="text" placeholder="Name"/>
+        <input type="password" placeholder="Password"/>
         <a class="button" href="login_client.html">Register</a>
-        <p class="message">Already registered? <a href="#">Sign In</a></p>
+        <p class="message">Already registered? <a href="login_client.html">Sign In</a></p>
       </form>
     </div>
 
