--- a/html/signup_admin.html
+++ b/html/signup_admin.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>ETMP Admin Sign in</title>
-  <meta name="description" content="ETMP admin login page">
+  <title>ETMP Admin Sign up</title>
+  <meta name="description" content="ETMP admin signup page">
 
   <link rel="stylesheet" href="../css/login_registration_styles.css">
 
@@ -16,11 +16,12 @@
   <div class="login-page">
 
     <div class="form">
-      <form class="login-form">
+      <form class="register-form">
         <input type="text" placeholder="employee ID"/>
+        <input type="text" placeholder="email address"/>
         <input type="password" placeholder="password"/>
-        <a class="button" href="#">Login</a>
-        <p class="message">Not registered? <a href="signup_admin.html">Create an account</a></p>
+        <a class="button" href="login_admin.html">Login</a>
+        <p class="message">Already registered? <a href="login_admin.html">Sign In</a></p>
       </form>
     </div>
 
