--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body style=" background-color: #3148a7;">
     <div id="header">
-      <div style="text-align: center;"><img src="file:///C:/Users/xXx/Desktop/Untitled.jpg"
-          alt="logo.big" title="logo" style="width: 303px; height: 134px;"></div>
+      <div style="text-align: center;"><img src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/expert%20logo.jpg"
+          alt="logo" title="logo big" style="width: 272px; height: 122px;"></div>
       <h1 style="text-align: center; margin-left: -37px; width: 1039px;"><b><span
             style="color: white;">Expert Management Training Portal</span></b><span
           style="color: white;"><b><span style="font-family: Calibri;"> (EMTP)</span></b></span></h1>
@@ -34,7 +34,7 @@
                 Us</a></strong></span> </li>
       </ul>
     </div>
-    <div id="body">
+    <div id="body" style="width: 918px;">
       <div id="tagline">
         <h1 style="width: 823px;">&nbsp;<span style="font-family: Calibri;">Expert.com</span></h1>
         <h2 style=" text-align: justify; width: 850px;"> Expert.com is a local
@@ -45,13 +45,24 @@
           business challenges by developing human capitals that meets the
           company’s needs.</h2>
       </div>
-      <div style="text-align: center;"><img src="images/lady-in-yoga.jpg" alt="lady doing yoga"
-          class="figure" style="width: 823px; height: 559px; margin-left: 57px;"></div>
+      <div style="text-align: center;"><img src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/training.jpg"
+          alt="traning" title="traning session" style="width: 840px; height: 560px;"></div>
     </div>
     <div id="footer">
-      <div> <span style="width: 638px;">93350, Jalan Simpang Tiga, Kuching,
-          Sarawak, Malaysia</span>
-        <p> © 2021 by Firuz Zaripov. All rights reserved. </p>
+      <div> <span style="width: 959px;">93350, Jalan Simpang Tiga, Kuching,
+          Sarawak, Malaysia &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; <img
+            src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/icon-facebook.png"
+            alt="fb" title="fb"> &nbsp; &nbsp;<img src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/icon-twitter.png"
+            alt="twitter" title="twitter"> &nbsp; <img src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/icon-googleplus.png"
+            alt="google" title="google">&nbsp;&nbsp; <img src="file:///C:/Users/xXx/Desktop/Expert.com/upload/images/icon-pinterest.png"
+            alt="pintrest" title="pintrest">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
+        <p>© 2021 by Firuz Zaripov. All rights reserved. </p>
       </div>
+    </div>
   </body>
 </html>
