added request description box
text area tag allowing for client to describe request in detail

--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -29,6 +29,11 @@
                 <input type="text" id="cNumber" placeholder="Mobile No"><br>
             </div>
 
+            <div class="form-group">
+                <label for="cRequestDesc">Request description</label><br>
+                <textarea id="requestDesc" rows="4" cols="50" placeholder="Describe your request"></textarea>
+            </div>
+
             <div class="form-submit">
                 <input type="submit" value="Submit">
             </div>
