--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <header>
+        <!-- <h1 id="logo">ETMP</h1> -->
+        <div class="container">
+            <nav>
+                <ul>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="#">My Profile</a></li>
+                  <li><a href="#">About App</a></li>
+                </ul>
+              </nav>
+        </div>
+      </header>
     <h1 class="page-heading">Traning Request Form</h1>
     <div class="form">
         <form class="training-request-form">
