--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -8,6 +8,7 @@
     <meta name="description" content="client push training request">
 
     <link rel="stylesheet" href="../css/training-styles.css">
+    <script src="../js/request_form.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
       </header>
     <h1 class="page-heading">Traning Request Form</h1>
     <div class="form">
-        <form class="training-request-form">
+        <form id="training-request-form" class="training-request-form">
             <div class="form-group">
                 <label for="fullName">Full Name :</label><br>
                 <input type="text" id="cName" placeholder="Jon Doe"><br>
