--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -29,12 +29,12 @@
         <form id="training-request-form" class="training-request-form">
             <div class="form-group">
                 <label for="fullName">Full Name :</label><br>
-                <input type="text" id="cName" placeholder="Jon Doe"><br>
+                <input type="text" id="cName" placeholder="Jon Doe" required><br>
             </div>
 
             <div class="form-group">
                 <label for="clientEmail">Email :</label><br>
-                <input type="email" id="cEmail" placeholder="jondoe@gmail.com"><br>
+                <input type="email" id="cEmail" placeholder="jondoe@gmail.com" required><br>
             </div>
 
             <div class="form-group">
@@ -44,7 +44,7 @@
 
             <div class="form-group">
                 <label for="cRequestDesc">Request description</label><br>
-                <textarea id="requestDesc" rows="4" cols="50" placeholder="Describe your request"></textarea>
+                <textarea id="requestDesc" rows="4" cols="50" placeholder="Describe your request" required></textarea>
             </div>
 
             <div class="form-submit">
