--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -8,7 +8,6 @@
     <meta name="description" content="client push training request">
 
     <link rel="stylesheet" href="../css/training-styles.css">
-    <script src="../js/request_form.js"></script>
 </head>
 
 <body>
@@ -26,25 +25,35 @@
       </header>
     <h1 class="page-heading">Traning Request Form</h1>
     <div class="form">
-        <form id="training-request-form" class="training-request-form">
+        <form class="training-request-form">
             <div class="form-group">
-                <label for="fullName">Full Name :</label><br>
-                <input type="text" id="cName" placeholder="Jon Doe" required><br>
+                <label for="firstName">First Name :</label><br>
+                <input type="text" id="fName" placeholder="John"><br>
+            </div>
+			
+			<div class="form-group">
+                <label for="lastName">Last Name :</label><br>
+                <input type="text" id="lName" placeholder="Doe"><br>
             </div>
 
             <div class="form-group">
                 <label for="clientEmail">Email :</label><br>
-                <input type="email" id="cEmail" placeholder="jondoe@gmail.com" required><br>
+                <input type="email" id="cEmail" placeholder="jondoe@gmail.com"><br>
             </div>
 
             <div class="form-group">
                 <label for="cContactNum">Mobile Number</label><br>
-                <input type="text" id="cNumber" placeholder="Mobile No"><br>
+                <input type="text" id="cNumber" placeholder="01198434843"><br>
+            </div>
+			
+			<div class="form-group">
+                <label for="address">Address :</label><br>
+                <input type="address" id="add" placeholder="Kuching, Malaysia"><br>
             </div>
 
             <div class="form-group">
                 <label for="cRequestDesc">Request description</label><br>
-                <textarea id="requestDesc" rows="4" cols="50" placeholder="Describe your request" required></textarea>
+                <textarea id="requestDesc" rows="4" cols="50" placeholder="Describe your request"></textarea>
             </div>
 
             <div class="form-submit">
