connected to php file to for request form data capture

--- a/html/add_traning_request.html
+++ b/html/add_traning_request.html
@@ -26,7 +26,7 @@
       </header>
     <h1 class="page-heading">Traning Request Form</h1>
     <div class="form">
-        <form id="training-request-form" class="training-request-form">
+        <form id="training-request-form" class="training-request-form" action="../PHP/request_form_data.php" method="POST">
             <div class="form-group">
                 <label for="fullName">Full Name :</label><br>
                 <input type="text" id="cName" placeholder="Jon Doe" required><br>
