added action method for sending form data into database

--- a/tRequest_form.html
+++ b/tRequest_form.html
@@ -23,7 +23,7 @@
                 <div class="col-md-6 offset-md-3">
                     <h1 class="text-center">Training Request Form</h1>
                     <hr>
-                    <form id="training_request_form">
+                    <form id="training_request_form" action="tRequest_action.php" method="POST">
                         <p class="lead">Fill in the form to see if the required training is provided.</p>
                         <div id="alert_error_message" class="alert alert-danger collapse" role="alert">
                             <i class="fa fa-exclamation-triangle"></i>
